Bug 980891 - #ifdef out usage of Skia objects on non-skia builds. r=gal, a=lsblakk